gitops/clusters/homelab/apps/public/plugin-noco-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugin-noco-tools
  namespace: public
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: plugin-noco-tools
  template:
    metadata:
      labels:
        app: plugin-noco-tools
    spec:
      automountServiceAccountToken: false
      containers:
        - name: plugin-noco-tools
          image: ghcr.io/kalpak44/noco-tools-site:bcaa02c
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
              ephemeral-storage: 50Mi
            limits:
              memory: 64Mi
              ephemeral-storage: 100Mi
