gitops/clusters/homelab/apps/public/plugin-noco-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plugin-noco-tools
  namespace: public
spec:
  selector:
    app: plugin-noco-tools
  ports:
    - port: 80
      targetPort: 80
